--- a/.github/workflows/a_Validate_PR_Changes.yml
+++ b/.github/workflows/a_Validate_PR_Changes.yml
@@ -74,6 +74,7 @@ jobs:
               inputs: {
                 files: files,
                 actor: actor,
-                ref_file: refFile
+                ref_file: refFile,
+                pr_number: prNumber
               }
             });
