--- a/.github/workflows/secure-check.yml
+++ b/.github/workflows/secure-check.yml
@@ -21,6 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      issues: write
+      pull-requests: write
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v4
