--- a/.github/workflows/secure-check.yml
+++ b/.github/workflows/secure-check.yml
@@ -44,6 +44,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.inputs.branch_name }}
+          path: pr-branch
           fetch-depth: 0
 
       - name: Checkout main branch (if needed)
@@ -69,7 +70,7 @@ jobs:
           python .github/scripts/check_language_properties.py \
             --actor ${{ github.event.inputs.actor }} \
             --reference-file "${{ env.REFERENCE_FILE }}" \
-            --branch "${{ github.event.inputs.branch_name }}" \
+            --branch pr-branch \
             --files "${{ github.event.inputs.files }}" > result.txt || true
 
       - name: Capture output
