--- a/.github/workflows/secure-check.yml
+++ b/.github/workflows/secure-check.yml
@@ -48,7 +48,7 @@ jobs:
           fetch-depth: 0
 
       - name: Checkout main branch (if needed)
-        if: env.REFERENCE_FILE == 'main/src/main/resources/messages_en_GB.properties'
+        # if: env.REFERENCE_FILE == 'main/src/main/resources/messages_en_GB.properties'
         uses: actions/checkout@v4
         with:
           ref: main
@@ -67,7 +67,7 @@ jobs:
       - name: Run Python script
         run: |
           echo "Running Python script to check files..."
-          python main/.github/scripts/check_language_properties.py \
+          python main-branch/.github/scripts/check_language_properties.py \
             --actor ${{ github.event.inputs.actor }} \
             --reference-file "${{ env.REFERENCE_FILE }}" \
             --branch pr-branch \
