--- a/.github/workflows/a_Validate_PR_Changes.yml
+++ b/.github/workflows/a_Validate_PR_Changes.yml
@@ -19,12 +19,13 @@ jobs:
       - name: Fetch PR changed files
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
         run: |
           echo "Fetching PR changed files..."
           gh repo set-default ${{ github.repository }}
 
           echo "PR_NUMBER=${{ github.event.pull_request.number }}" >> $GITHUB_ENV
-          BRANCH_NAME=$(echo '${{ github.event.pull_request.head.ref }}' | grep -E '^[a-zA-Z0-9._/-]+$' | grep -v -e '^\.\/' -e '\.\.')
+          BRANCH_NAME=$(echo '$BRANCH_NAME' | grep -E '^[a-zA-Z0-9._/-]+$' | grep -v -e '^\.\/' -e '\.\.')
           if [ -z "$BRANCH_NAME" ]; then
               echo "Ungültiger Branch-Name erkannt!"
               exit 1
