--- a/.github/workflows/check_properties.yml
+++ b/.github/workflows/check_properties.yml
@@ -29,9 +29,11 @@ jobs:
 
       - name: Checkout PR branch
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        env:
+          PULL_REQUEST_REF: ${{ github.event.pull_request.head.ref }}
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: refs/pull/${{ github.event.pull_request.number }}/merge
+          ref: $PULL_REQUEST_REF
           path: pr-branch
           fetch-depth: 0
 
