--- a/.github/workflows/a_Validate_PR_Changes.yml
+++ b/.github/workflows/a_Validate_PR_Changes.yml
@@ -13,6 +13,10 @@ jobs:
     permissions:
       actions: write
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
+        with:
+          egress-policy: audit
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
