--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,6 +18,10 @@ jobs:
     if: github.event_name == 'pull_request_target'
     runs-on: ubuntu-latest
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
+        with:
+          egress-policy: audit
       - name: Checkout PR branch
         uses: actions/checkout@v4
         with:
@@ -76,7 +80,10 @@ jobs:
       - name: Run Python script to check files
         id: run-check
         run: |
-          python main-branch/.github/scripts/check_language_files.py --reference-file ${{ env.REFERENCE_FILE }} --branch ${{ env.BRANCH_PATH }} --files ${{ env.CHANGED_FILES }} > failure.txt || true
+          python main-branch/.github/scripts/check_language_files.py \
+            --reference-file ${{ env.REFERENCE_FILE }} \
+            --branch ${{ env.BRANCH_PATH }} \
+            --files ${{ env.CHANGED_FILES }} > failure.txt || true
 
       - name: Capture output
         id: capture-output
