--- a/.github/workflows/fake_deploy.yml
+++ b/.github/workflows/fake_deploy.yml
@@ -6,6 +6,10 @@ jobs:
   fake_deploy_cache_multi:
     runs-on: ubuntu-latest
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
+        with:
+          egress-policy: audit
       - uses: actions/checkout@v4
 
       - name: Set up JDK 17
