--- a/.github/workflows/push-docker-new.yml
+++ b/.github/workflows/push-docker-new.yml
@@ -29,6 +29,10 @@ jobs:
             branch_condition: ${{ github.ref == 'refs/heads/main' }}
 
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
+        with:
+          egress-policy: audit
       - uses: actions/checkout@v4
 
       - name: Set up JDK 17
