--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,105 +8,109 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Harden Runner
+        uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
+        with:
+          egress-policy: audit
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y xorg-dev mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev \
-        libxcursor-dev libxrandr-dev libxinerama-dev build-essential liblcms2-dev
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xorg-dev mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev \
+          libxcursor-dev libxrandr-dev libxinerama-dev build-essential liblcms2-dev
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel  # Install necessary build tools
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel  # Install necessary build tools
 
-    - name: Clone MuPDF repository
-      run: |
-        git clone https://github.com/ArtifexSoftware/mupdf.git
-        cd mupdf
-        git submodule update --init --recursive
+      - name: Clone MuPDF repository
+        run: |
+          git clone https://github.com/ArtifexSoftware/mupdf.git
+          cd mupdf
+          git submodule update --init --recursive
 
-    - name: Build MuPDF
-      run: |
-        cd mupdf
-        make clean
-        make prefix=/usr/local install
+      - name: Build MuPDF
+        run: |
+          cd mupdf
+          make clean
+          make prefix=/usr/local install
 
-    - name: Validate installation
-      run: |
-        mupdf-gl --version
-        muraster --version
-        mutool --version
+      - name: Validate installation
+        run: |
+          mupdf-gl --version
+          muraster --version
+          mutool --version
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel  # Install necessary build tools
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel  # Install necessary build tools
 
-    - name: Clone MuPDF repository
-      run: |
-        git clone https://github.com/ArtifexSoftware/mupdf.git
+      - name: Clone MuPDF repository
+        run: |
+          git clone https://github.com/ArtifexSoftware/mupdf.git
 
-    - name: List files in the MuPDF directory
-      run: |
-        cd mupdf
-        ls -la
+      - name: List files in the MuPDF directory
+        run: |
+          cd mupdf
+          ls -la
 
-    - name: Check the setup.py script
-      run: |
-        cd mupdf
-        head -n 20 setup.py
+      - name: Check the setup.py script
+        run: |
+          cd mupdf
+          head -n 20 setup.py
 
-    - name: Build MuPDF package
-      run: |
-        cd mupdf
-        python setup.py sdist bdist_wheel
+      - name: Build MuPDF package
+        run: |
+          cd mupdf
+          python setup.py sdist bdist_wheel
 
-    - name: Upload distribution
-      uses: actions/upload-artifact@v4
-      with:
-        name: dist
-        path: |
-          dist/*.tar.gz
-          dist/*.whl
+      - name: Upload distribution
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: |
+            dist/*.tar.gz
+            dist/*.whl
 
-    - name: Test the package
-      run: |
-        pip install dist/*.whl  # Install the built package
+      - name: Test the package
+        run: |
+          pip install dist/*.whl  # Install the built package
 
-    - name: Set up git config
-      run: |
-        git config --global user.email "GitHub Action <action@github.com>"
-        git config --global user.name "GitHub Action <action@github.com>"
+      - name: Set up git config
+        run: |
+          git config --global user.email "GitHub Action <action@github.com>"
+          git config --global user.name "GitHub Action <action@github.com>"
 
-    - name: Run git add
-      run: |
-        git add .
-        git diff --staged --quiet || echo "CHANGES_DETECTED=true" >> $GITHUB_ENV
+      - name: Run git add
+        run: |
+          git add .
+          git diff --staged --quiet || echo "CHANGES_DETECTED=true" >> $GITHUB_ENV
 
-    - name: Create Pull Request
-      id: cpr
-      if: env.CHANGES_DETECTED == 'true'
-      uses: peter-evans/create-pull-request@v6
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: "Update Build MuPDF"
-        committer: GitHub Action <action@github.com>
-        author: GitHub Action <action@github.com>
-        signoff: true
-        branch: build-mupdf-js
-        title: "Update Build MuPDF"
-        body: |
-          Auto-generated by [create-pull-request][1]
+      - name: Create Pull Request
+        id: cpr
+        if: env.CHANGES_DETECTED == 'true'
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "Update Build MuPDF"
+          committer: GitHub Action <action@github.com>
+          author: GitHub Action <action@github.com>
+          signoff: true
+          branch: build-mupdf-js
+          title: "Update Build MuPDF"
+          body: |
+            Auto-generated by [create-pull-request][1]
 
-          [1]: https://github.com/peter-evans/create-pull-request
-        labels: licenses
-        draft: false
-        delete-branch: true
+            [1]: https://github.com/peter-evans/create-pull-request
+          labels: licenses
+          draft: false
+          delete-branch: true
