--- a/.github/workflows/sync_files.yml
+++ b/.github/workflows/sync_files.yml
@@ -17,6 +17,10 @@ jobs:
   sync-versions:
     runs-on: ubuntu-latest
     steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
+        with:
+          egress-policy: audit
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
