--- a/.github/workflows/a_Validate_PR_Changes.yml
+++ b/.github/workflows/a_Validate_PR_Changes.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - "src/main/resources/messages_*.properties"
 
-permissions: read-all
+permissions:
+  contents: read
 
 jobs:
   validate:
