--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -5,6 +5,8 @@ on:
     branches: ["main"]
   workflow_dispatch:
 
+permissions:
+  contents: read
 jobs:
   ############################
   # BUILDING THE DOCUMENTATION
