--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -5,8 +5,8 @@ on:
     branches: ["main"]
   workflow_dispatch:
 
-permissions:
-  contents: read
+permissions: read-all
+
 jobs:
   ############################
   # BUILDING THE DOCUMENTATION
