--- a/.github/workflows/check_properties.yml
+++ b/.github/workflows/check_properties.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           egress-policy: audit
 
+      - name: TEETT
+        run: echo ${{ github.event.pull_request.head.ref }}
+
       - name: Checkout main branch first
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
