--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -32,7 +32,7 @@ jobs:
           echo "Fetching PR changed files..."
           # Fetch upstream main branch
           git fetch upstream main
-          CHANGED_FILES=$(git diff --name-only FETCH_HEAD...HEAD | grep -E '^src/main/resources/messages_[a-zA-Z_]+\.properties$')
+          CHANGED_FILES=$(git diff --name-only upstream/main...HEAD | grep -E '^src/main/resources/messages_[a-zA-Z_]+\.properties$')
 
           echo "Processing changed files..."
           if [ -z "$CHANGED_FILES" ]; then
