--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -67,6 +67,7 @@ jobs:
           python .github/scripts/check_language_properties.py \
             --actor ${{ github.event.pull_request.user.login }} \
             --reference-file "${REFERENCE_FILE}" \
+            --branch "${GITHUB_HEAD_REF}" \
             --files $(cat changed_files.txt) > result.txt || true
 
       - name: Capture output
