--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -55,7 +55,7 @@ jobs:
           gh repo set-default ${{ github.repository }}
           # Store files in a safe way, only allowing valid properties files
           echo "Getting list of changed files from PR..."
-          GHOUTPUT=$(gh pr view ${{ github.event.pull_request.number }} --json)
+          GHOUTPUT=$(gh pr view ${{ github.event.pull_request.number }} --json headRefName,headRefOid)
           echo "$OUTPUT"
           gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]+\.properties$' > ../changed_files.txt
           cd ..
