--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           egress-policy: audit
 
-      # - name: Checkout main branch first
-      #   uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Checkout main branch first
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       #   with:
       #     ref: main
       #     path: main-branch
