--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -58,8 +58,8 @@ jobs:
           GHOUTPUT=$(gh pr view ${{ github.event.pull_request.number }} --json headRefName,headRefOid)
           pp=$(gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path")
           echo "$GHOUTPUT"
-          echo "$pp"
-          gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]+\.properties$' > ../changed_files.txt
+          echo "$pp "
+          gh pr view ${{ github.event.pull_request.number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]+\.properties$' > changed_files.txt
           # cd ..
 
           echo "Processing changed files..."
