--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -84,6 +84,8 @@ jobs:
           REPO_NAME=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository -q '.headRepository.name')
           BRANCH=$(gh pr view $PR_NUMBER --json headRefName -q '.headRefName')
 
+          echo $BRANCH
+
           # Zeige den Inhalt der Dateien
           while IFS= read -r file; do
             echo "File: $file"
