--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -42,8 +42,8 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Install GitHub CLI
-        run: sudo apt-get update && sudo apt-get install -y gh
+      # - name: Install GitHub CLI
+      #   run: sudo apt-get update && sudo apt-get install -y gh
 
       - name: Fetch PR changed files
         id: fetch-pr-changes
